bard 3.1.30